--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
