--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="Engaging AI-powered quizzes." />
     <meta property="og:image" content="/og-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" async defer></script>
   </head>
   <body>
     <div id="root"></div>
