--- a/frontend/playwright/index.html
+++ b/frontend/playwright/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+<!-- frontend/playwright/index.html -->
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testing Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Playwright CT</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- REQUIRED: link the facade script -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
