UI Design: Final Results

--- a/frontend/result.html
+++ b/frontend/result.html
@@ -1,3 +1,4 @@
+<!-- result.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,11 +6,11 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"/>
-    <title>Sprite Playground</title>
+    <title>Result Preview</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- This points to the tiny dev entry below -->
-    <script type="module" src="/src/dev/sprite.tsx"></script>
+    <!-- Dev-only entry -->
+    <script type="module" src="/src/dev/result.tsx"></script>
   </body>
 </html>
